style: button min height to prevent layout shift

--- a/components/SearchResults/Filter/FilterAccordion/FilterAccordion.module.scss
+++ b/components/SearchResults/Filter/FilterAccordion/FilterAccordion.module.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     border: none;
     background-color: transparent;
+    min-height: 45px;
     cursor: pointer;
 
     &:hover {
